data/derived/comb/progs/unify/prog3399.ml.out
Characters 15-17:
  let _ = assoc (-1,"william",[("ranjit",85);("william",23);("moose",44)]);;
                 ^^
Error: This expression has type int but an expression was expected of type
         'a * 'b -> 'b
